--- a/blocks/profile/__editButton/profile__editButton.css
+++ b/blocks/profile/__editButton/profile__editButton.css
@@ -6,6 +6,7 @@
     background-image: url(../../../images/edit-button.svg);
     background-position: center;
     background-repeat: no-repeat;
+    box-sizing: border-box;
     border: 1px solid #ffff;
     cursor: pointer;
     transition: opacity 0.5s linear;
