--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,13 +1,18 @@
 .profile__name {
     margin: 0;
+    max-width: 500px;
     font-weight: 500;
     font-size: 42px;
     line-height: 114%;
     color: #FFFFFF;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 800px) {
     .profile__name {
+        max-width: 300px;
         font-weight: 500;
         font-size: 27px;
         line-height: 33px;
