--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,13 +1,18 @@
 .profile__job {
     margin: 0;
+    max-width: 500px;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 800px) {
     .profile__job {
+    max-width: 300px;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
