--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -4,6 +4,6 @@
 
 @media screen and (max-width: 600px) {
     .page__header {
-        margin: 28px auto 0;;
+        margin: 28px auto 0;
     }
 }
