--- a/blocks/popup/__container-image/popup__container-image.css
+++ b/blocks/popup/__container-image/popup__container-image.css
@@ -1,14 +1,8 @@
 .popup__container-image {
     position: relative;
-    width: 75%;
-    max-width: 825px;
+    max-width: 75%;
+    width: fit-content;
     max-height: 75vh;
     display: flex;
     flex-direction: column;
-}
-
-@media screen and (max-width:500px) {
-    .popup__container_image {
-        max-width: 400px;
-    }   
 }
