--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -26,3 +26,11 @@
         line-height: 17px;
     }
 }
+
+.popup__save-button:disabled {
+    color: #000;
+    background-color: #fff;
+    opacity: 0.2;
+    border: 1px solid #000;
+    pointer-events: none;
+}
